@@ -44,6 +44,7 @@ möglicherweise nicht kompatible Änderungen:
 - .webStandard strong/em/ol/ul/li ist jetzt im vps und sollte in webs entfernt werden
 - newsListView und eventsListView Teaser haben jetzt ein nl2br
 - showInPageTreeAdmin flag gibts nicht mehr, ist jetzt nur noch ein generatorFlag
+- Image Dimensionen: wenn width oder height 0 ist muss 'deform' verwendet werden
 
 == 1.10 ==
 Erstellt: 09.06.10
